# raman-control

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py
notebooks/: Full attempt.ipynb  Oct-28.ipynb  expts1 - nidaq.ipynb  from-script.ipynb  oct-28-2.ipynb  z-stack-raman.ipynb
raman_control/: __init__.py  calibration.py  daq.py  laser.py  scope.py  spectra.py  utils.py
raman_control/calibration/: __init__.py  _calibration.py  model.json
