[metadata]
name = raman_control
version = attr: raman_control._version.__version__
description = highly automated system to poke yeast with half million dollar lasers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/raman-control
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/ianhi/raman-control

[options]
packages = find:
python_requires = >=3.7
install_requires =
    nidaqmx
    # pythonnet
include_package_data = True

[options.extras_require]
full =
    pythonnet
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
per-file-ignores =
    raman_control/spectra.py: F405
